--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -18,7 +18,19 @@
     align-items: flex-end;
     padding-bottom: 20px;
     background: rgba(1, 36, 42, 0.5);
-    width: auto;
+    backdrop-filter: blur(5px);
+    margin: 0 auto;
+    margin-bottom: 22px;
+    border-radius: 30px;
+    max-width: 875px;
+    width: 100%;
+    @media (max-width: 900px) {
+      max-width: 90%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      row-gap: 20px;
+    }
     .form-group {
       display: flex;
       align-items: flex-start;
@@ -50,6 +62,57 @@
       .input-adult {
         width: 258px;
         padding: 15px 30px;
+      }
+      .booking-form {
+        .guests-block {
+          display: flex;
+          align-items: center;
+          background-color: $white;
+          border-radius: 20px;
+          cursor: pointer;
+          padding: 15px 30px;
+          column-gap: 8px;
+          span {
+            font-family: "Noto Sans", sans-serif;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 30px;
+          }
+        }
+        .guests-modal {
+          margin-bottom: 20px;
+          z-index: 15;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.4);
+          display: flex;
+          flex-direction: column;
+          row-gap: 20px;
+          border-radius: 20px;
+          .guests-type {
+            margin: 20px 0;
+          }
+          .modal-content {
+            background-color: #fefefe;
+            border-radius: 20px;
+            margin: auto;
+            padding: 20px;
+            .close-button {
+              color: #aaa;
+              float: right;
+              font-size: 28px;
+              font-weight: bold;
+            }
+
+            .counter-button {
+              font-size: 24px;
+              padding: 0 10px;
+              cursor: pointer;
+            }
+          }
+        }
       }
     }
     .submit-btn {
