--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,18 +1,108 @@
 // font-family: "Noto Sans", sans-serif;
 // font-family: "Inter", sans-serif;
 @import "../../style/vars";
-.navbar {
+.navbar-active {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 6;
+  padding: 30px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
+  overflow: hidden;
+  .navbar-logo {
+    img {
+      width: 180px;
+      height: 64px;
+    }
+  }
+  .burger-active {
+
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      cursor: pointer;
+      top: 50px;
+      right: 20px;
+      width: 30px;
+      height: 30px;
+      span {
+        border: 1px solid $white;
+        width: 24px;
+        height: 1px;
+      }
+      span:nth-child(1) {
+        transform: rotate(-45deg);
+      }
+      span:nth-child(2) {
+        transform: rotate(-135deg);
+      }
+    
+  }
+  .navbar__menu {
+    ul {
+      margin-top: 20px;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      row-gap: 20px;
+      .navbar__menu-link {
+        font-family: "Noto Sans", sans-serif;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 27.24px;
+        position: relative;
+        color: $white;
+        text-decoration: none;
+      }
+    }
+  }
+}
+.navbar {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
   padding: 20px 74px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-radius: 0px 0px 20px 20px;
-
+  .burger-active {
+    display: none;
+  }
+  @media (max-width: 1000px) {
+    padding: 20px 30px;
+  }
+  .burger {
+    display: none;
+    @media (max-width: 1000px) {
+      display: flex;
+      flex-direction: column;
+      row-gap: 8px;
+      cursor: pointer;
+      span {
+        border: 1px solid $white;
+        width: 24px;
+        height: 1px;
+      }
+    }
+  }
   .navbar-logo {
     img {
       width: 287px;
       height: 64px;
+      @media (max-width: 1000px) {
+        width: 200px;
+        height: 64px;
+      }
     }
   }
   .navbar__menu {
@@ -20,6 +110,7 @@
       display: flex;
       align-items: center;
       column-gap: 80px;
+      list-style: none;
       .navbar__menu-link {
         font-family: "Noto Sans", sans-serif;
         font-size: 20px;
@@ -32,6 +123,9 @@
       .active {
         padding-bottom: 9px;
         border-bottom: 2px solid rgba(198, 159, 118, 1);
+      }
+      @media (max-width: 1000px) {
+        display: none;
       }
     }
   }
