--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -64,6 +64,7 @@
         padding: 15px 30px;
       }
       .booking-form {
+        position: relative;
         .guests-block {
           display: flex;
           align-items: center;
@@ -80,10 +81,11 @@
           }
         }
         .guests-modal {
+          position: absolute;
           margin-bottom: 20px;
           z-index: 15;
           left: 0;
-          top: 0;
+          top: -250px;
           width: 100%;
           height: 100%;
           background-color: rgba(0, 0, 0, 0.4);
@@ -91,8 +93,13 @@
           flex-direction: column;
           row-gap: 20px;
           border-radius: 20px;
-          .guests-type {
-            margin: 20px 0;
+          .guest-type {
+            margin: 10px 0;
+            .counter {
+              display: flex;
+              column-gap: 10px;
+              align-items: center;
+            }
           }
           .modal-content {
             background-color: #fefefe;
@@ -107,9 +114,15 @@
             }
 
             .counter-button {
+              width: 70px;
               font-size: 24px;
               padding: 0 10px;
+              color: $white;
               cursor: pointer;
+              background-color: $darkPearl;
+              border: none;
+              outline: none;
+              border-radius: 7px;
             }
           }
         }
