--- a/src/Components/AboutUsInNumbers/AboutUsInNumbers.scss
+++ b/src/Components/AboutUsInNumbers/AboutUsInNumbers.scss
@@ -4,6 +4,9 @@
   display: flex;
   flex-direction: column;
   row-gap: 48px;
+  @media(max-width:1300px){
+    padding: 20px;
+  }
   .aboutUsInNumbers-title {
     margin-left: 16px;
     font-family: "Noto Sans", sans-serif;
@@ -11,6 +14,9 @@
     font-weight: 700;
     line-height: 40px;
     color: $greyBold;
+    @media(max-width:1150px){
+      font-size: 40px;
+    }
   }
   .aboutUsInNumbers-glavitem {
     padding: 35px 127px;
@@ -19,6 +25,12 @@
     align-items: center;
     background-color: $white;
     border-radius: 30px;
+    @media(max-width:1150px){
+      padding: 30px 50px;
+    }
+    @media(max-width:750px){
+      flex-direction: column;
+    }
     .aboutUsInNumbers-subitem {
       display: flex;
       flex-direction: column;
@@ -30,6 +42,9 @@
         font-size: 64px;
         font-weight: 500;
         line-height: 87.17px;
+        @media(max-width:1150px){
+          font-size: 32px;
+        }
       }
       .subitem-description {
         font-family: "Noto Sans", sans-serif;
@@ -37,6 +52,9 @@
         font-weight: 400;
         line-height: 29.96px;
         color: $pearl;
+        @media(max-width:1150px){
+          font-size: 15px;
+        }
       }
     }
   }
