--- a/src/Components/Catalog/Catalog.scss
+++ b/src/Components/Catalog/Catalog.scss
@@ -4,11 +4,17 @@
     background: linear-gradient(180deg, #ffffff 0%, #f3f3f6 100%);
     border-radius: 80px;
     padding: 80px 100px 225px 100px;
-    margin: 0 37px;
+    margin: 0 30px;
     display: flex;
     align-items: center;
     column-gap: 145px;
     justify-content: space-between;
+    @media (max-width: 1100px) {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      padding: 80px 0 225px 20px;
+    }
     .catalog-head-title {
       font-family: "Inter", sans-serif;
       font-size: 40px;
@@ -17,6 +23,14 @@
       color: $greyBold;
       max-width: 507px;
       width: 100%;
+      @media (max-width: 1100px) {
+        max-width: 100%;
+        width: auto;
+      }
+      @media (max-width: 700px) {
+        font-size: 30px;
+        line-height: 32px;
+      }
     }
     .catalog-head-subtitle {
       color: $lightGrey;
@@ -26,6 +40,13 @@
       line-height: 26.63px;
       max-width: 589px;
       width: 100%;
+      @media (max-width: 1100px) {
+        max-width: 100%;
+        width: auto;
+      }
+      @media (max-width: 600px) {
+        margin-top: 10px;
+      }
     }
   }
   .catalog-footer {
@@ -39,6 +60,11 @@
     color: $lightGrey;
     max-width: 1139px;
     width: 100%;
+    @media (max-width: 1300px) {
+      margin-left: 30px;
+      max-width: 100%;
+      width: auto;
+    }
   }
   .card__glavitem {
     display: flex;
@@ -46,6 +72,10 @@
     margin: 0 110px;
     margin-top: -161px;
     row-gap: 30px;
+    @media (max-width: 1300px) {
+      margin: 0 30px;
+      margin-top: -161px;
+    }
     .card__item {
       display: flex;
       align-items: center;
@@ -53,20 +83,41 @@
       height: 550px;
       background-color: $white;
       border-radius: 0px 30px 30px 0px;
+      @media (max-width: 1175px) {
+        align-items: flex-start;
+      }
+      @media (max-width: 850px) {
+        height: 450px;
+      }
+      @media (max-width: 550px) {
+        flex-direction: column;
+      }
       .card__item-img {
         width: 50%;
         height: 100%;
+        @media (max-width: 550px) {
+          width: 100%;
+          height: 50%;
+        }
         img {
           width: 100%;
           height: 100%;
+          border-radius: 30px, 0px, 0px, 30px;
         }
       }
+
       .card__item-right {
         display: flex;
         align-items: flex-start;
         flex-direction: column;
         width: 50%;
         padding: 50px 38px 32px 50px;
+        @media (max-width: 1175px) {
+          padding: 20px;
+        }
+        @media (max-width: 550px) {
+          width: 100%;
+        }
         .description {
           display: flex;
           align-items: flex-start;
@@ -78,6 +129,13 @@
             font-family: "Inter", sans-serif;
             color: $greyBold;
             margin-bottom: 16px;
+            @media (max-width: 700px) {
+              font-size: 20px;
+              line-height: 30px;
+            }
+            @media(max-width:550px){
+              margin-bottom: 10px;
+             }
           }
           .description-area,
           .description-furniture,
@@ -88,6 +146,17 @@
             line-height: 29.96px;
             color: $grey;
             margin-bottom: 5px;
+            @media (max-width: 1175px) {
+              display: none;
+            }
+          }
+          .description-furniture {
+            @media (max-width: 1175px) {
+              display: block;
+            }
+            @media (max-width: 700px) {
+              display: none;
+            }
           }
         }
         .booking {
@@ -95,6 +164,15 @@
           display: flex;
           align-items: flex-start;
           column-gap: 60px;
+          @media (max-width: 1175px) {
+            margin-top: 10px;
+            flex-direction: column;
+            row-gap: 20px;
+          }
+          @media(max-width:550px){
+            row-gap: 5px;
+            margin-top: 0;
+           }
           p {
             font-family: "Noto Sans", sans-serif;
             font-size: 26.67px;
@@ -107,6 +185,12 @@
               font-weight: 700;
               line-height: 43.58px;
               margin-right: 10px;
+              @media (max-width: 550px) {
+                font-size: 22px;
+              }
+            }
+            @media (max-width: 550px) {
+              font-size: 15px;
             }
           }
           .booking-btn {
@@ -123,6 +207,12 @@
               line-height: 27.24px;
               text-decoration: none;
               color: $white;
+              @media (max-width: 550px) {
+                font-size: 12px;
+              }
+            }
+            @media (max-width: 550px) {
+              padding: 10px 32px;
             }
           }
         }
