--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -5,6 +5,17 @@
   align-items: center;
   justify-content: space-between;
   padding: 55px 115px 55px 43px;
+  @media (max-width: 1300px) {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    gap: 10px;
+  }
+  @media (max-width: 900px) {
+    row-gap: 20px;
+  }
   .social {
     display: flex;
     flex-direction: column;
@@ -35,10 +46,31 @@
         height: 56px;
       }
     }
+    @media (max-width: 1300px) {
+      width: 45%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    @media (max-width: 900px) {
+      width: 90%;
+    }
   }
   .footer__item-logo {
     width: 332px;
     height: 191px;
+    @media (max-width: 1300px) {
+      width: 45%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    @media (max-width: 900px) {
+      width: 90%;
+    }
+    @media(max-width:450px){
+      display: none;
+    }
   }
   .footer__item {
     position: relative;
@@ -51,6 +83,9 @@
       position: absolute;
       top: 0;
       left: -50px;
+      @media(max-width:1300px){
+        display: none;
+      }
     }
     span {
       color: $darkWhite;
@@ -59,8 +94,17 @@
       font-weight: 400;
       line-height: 27.24px;
     }
-    .span-adress{
-        max-width: 368px;
+    .span-adress {
+      max-width: 368px;
+    }
+    @media (max-width: 1300px) {
+      width: 45%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    @media (max-width: 900px) {
+      width: 90%;
     }
   }
 }
