--- a/src/Components/OurComplex/OurComplex.scss
+++ b/src/Components/OurComplex/OurComplex.scss
@@ -2,6 +2,9 @@
 .complex {
   padding: 111px 111px 151px 124px;
   position: relative;
+  @media(max-width: 800px){
+    padding: 20px;
+  }
   .complex-description {
     max-width: 754px;
     display: flex;
@@ -15,6 +18,14 @@
       font-weight: 700;
       line-height: 40px;
       margin-bottom: 20px;
+       @media(max-width: 600px){
+       font-size: 14px;
+        margin-bottom: 10px;
+      line-height: 15px;
+      }
+      @media(max-width: 450px){
+         margin-bottom: 0px;
+       }
     }
     .complex-subtitle {
       font-family: "Noto Sans", sans-serif;
@@ -22,9 +33,14 @@
       font-weight: 400;
       line-height: 29.96px;
       color: $grey;
+      @media(max-width: 600px){
+        padding: 5px 0 5px 0;
+        font-size: 12px;
+        line-height: 15px;
+      }
     }
     .complex-subtitle1 {
-      margin-bottom: 30px;
+      margin-bottom: 0px;
     }
   }
   .complex-img {
