--- a/src/Components/Swiper/Swiper.scss
+++ b/src/Components/Swiper/Swiper.scss
@@ -4,6 +4,14 @@
   margin-bottom: 75px;
   margin-left: 110px;
   margin-right: 110px;
+  @media(max-width:900px){
+    margin-left: 50px;
+    margin-right: 0px;
+  }
+  @media(max-width: 600px){
+    margin-left: 20px;
+    margin-right: 0px;
+  }
   .navigation {
     display: flex;
     align-items: center;
@@ -14,6 +22,10 @@
       font-weight: 400;
       line-height: 27.24px;
       color: rgba(45, 68, 72, 1);
+      @media(max-width:450px){
+        font-size: 14px;
+        line-height: 17px;
+      }
     }
   }
   .swiper-pagination {
@@ -33,10 +45,17 @@
         column-gap: 40px;
         align-items: center;
         width: 100%;
+        @media(max-width:1000px){
+          flex-direction: column;
+          row-gap: 20px;
+        }
         img {
-          width: 50%;
+          width: 45%;
           height: 434px;
           border-radius: 20px;
+          @media(max-width:1000px){
+           width: 90%;
+          }
         }
       }
     }
