--- a/src/Components/Catalog/Catalog.scss
+++ b/src/Components/Catalog/Catalog.scss
@@ -99,10 +99,18 @@
           width: 100%;
           height: 50%;
         }
-        img {
+        .swiper {
           width: 100%;
           height: 100%;
-          border-radius: 30px, 0px, 0px, 30px;
+          .swiper-wrapper {
+            .swiper-slide {
+              img {
+                width: 100%;
+                height: 100%;
+                border-radius: 30px, 0px, 0px, 30px;
+              }
+            }
+          }
         }
       }
 
@@ -133,9 +141,9 @@
               font-size: 20px;
               line-height: 30px;
             }
-            @media(max-width:550px){
+            @media (max-width: 550px) {
               margin-bottom: 10px;
-             }
+            }
           }
           .description-area,
           .description-furniture,
@@ -169,10 +177,10 @@
             flex-direction: column;
             row-gap: 20px;
           }
-          @media(max-width:550px){
+          @media (max-width: 550px) {
             row-gap: 5px;
             margin-top: 0;
-           }
+          }
           p {
             font-family: "Noto Sans", sans-serif;
             font-size: 26.67px;
